--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ killme.sh
 # Ignore all files in the 'logs' subfolder.
 data/
 data_64/
+new/
+new_64/
 Figures_backup/
 model_64_backup/
 Prediction/
